--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
  Licensed under the MIT License.
  -->
 <package format="2">
-  <name>azure-kinect-ros-driver</name>
+  <name>azure_kinect_ros_driver</name>
   <version>0.9.0</version>
   <description>The Azure Kinect Sensor Driver for ROS.</description>
   <maintainer email="stalldri@microsoft.com">Stuart Alldritt</maintainer>
