Fix windows build and nodelet lib search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,24 +211,22 @@ if (${K4A_INSTALL_NEEDED})
   set_property(DIRECTORY APPEND PROPERTY CMAKE_CONFIGURE_DEPENDS ${K4A_DLL_FILES})
 
   # We need to copy the DLLs into the CATKIN_PACKAGE_LIB_DESTINATION so
-  # the node executable can find them on launch
-  if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    set(DLL_COPY_DIRECTORY "${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_BIN_DESTINATION}")
-  elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
-    set(DLL_COPY_DIRECTORY "${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_LIB_DESTINATION}")
-  endif()
+  # the node executable can find them on launch, and CATKIN_PACKAGE_BIN_DESTINATION
+  # so the nodelet can find them on launch
+  set(DLL_COPY_DIRECTORY "${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_BIN_DESTINATION};${CATKIN_DEVEL_PREFIX}/${CATKIN_PACKAGE_LIB_DESTINATION}")
 
-  file(MAKE_DIRECTORY "${DLL_COPY_DIRECTORY}")
+  foreach(DIRECTORY ${DLL_COPY_DIRECTORY})
+    file(MAKE_DIRECTORY "${DIRECTORY}")
+  endforeach(DIRECTORY)
 
   foreach(DLL ${K4A_DLL_FILES})
-    file(COPY "${DLL}" DESTINATION "${DLL_COPY_DIRECTORY}")
-    
-    get_filename_component(DLL_NAME ${DLL} NAME)
-
-    message(STATUS "Copied dll from ${DLL_NAME} to ${DLL_COPY_DIRECTORY}")
-
-    # Tell cmake that we need to clean up these DLLs on a "make clean"
-    set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${DLL_COPY_DIRECTORY}/${DLL_NAME}")
+    foreach(DIRECTORY ${DLL_COPY_DIRECTORY})
+      file(COPY "${DLL}" DESTINATION "${DIRECTORY}")
+      get_filename_component(DLL_NAME ${DLL} NAME)
+      message(STATUS "Copied dll from ${DLL_NAME} to ${DIRECTORY}")
+      # Tell cmake that we need to clean up these DLLs on a "make clean"
+      set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES "${DIRECTORY}/${DLL_NAME}")
+    endforeach(DIRECTORY)
   endforeach(DLL)
   
 endif()
