--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,13 @@ jobs:
     vmImage: 'vs2017-win2016'
 
   steps:
+  - checkout: self
+    clean: "all"
+    fetchDepth: 20
+    lfs: false
+    persistCredentials: true
+    submodules: true
+    path: catkin_ws\src\Azure_Kinect_ROS_Driver
 
   # Install Chcolatey
   - powershell: Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
@@ -39,14 +46,6 @@ jobs:
       cd %BUILD_SOURCESDIRECTORY%\catkin_ws
       catkin_make
     displayName: Create Catkin Workspace
-
-  - checkout: self
-    clean: "all"
-    fetchDepth: 20
-    lfs: false
-    persistCredentials: false
-    submodules: true
-    path: catkin_ws\src\Azure_Kinect_ROS_Driver
 
   # Download and install the Azure Kinect Sensor SDK 
   - powershell: |
