--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,17 @@
 name: Azure_Kinect_ROS_Driver-$(SourceBranchName)-$(Date:yyyyMMdd)-$(Rev:rrr)
 
 trigger:
-  batch: false
+  batch: true
   branches:
     include:
+    - master
+    - develop
+    - melodic
+
+pr:
+  autoCancel: true
+  branches:
+    include: 
     - master
     - develop
     - melodic
@@ -25,7 +33,7 @@ jobs:
     lfs: false
     persistCredentials: true
     submodules: true
-    path: catkin_ws\src\Azure_Kinect_ROS_Driver
+    #path: catkin_ws\src\Azure_Kinect_ROS_Driver
 
   # Install Chcolatey
   - powershell: Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
