--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,3 +64,33 @@ jobs:
       catkin_make --force-cmake
     displayName: Build ROS Driver Node
 
+- job: LinuxMelodic
+  displayName: Linux Melodic
+
+  pool:
+    vmImage: 'ubuntu-16.04'
+
+  container: 'ros:melodic'
+
+  steps:
+  - checkout: self
+    clean: "all"
+    fetchDepth: 20
+    lfs: false
+    persistCredentials: true
+    submodules: true
+    path: catkin_ws\src\Azure_Kinect_ROS_Driver
+
+  # Download and install the Azure Kinect Sensor SDK 
+  - bash: |
+      curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+      sudo apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
+      sudo apt-get update
+      sudo apt-get install libk4a1.1-dev
+    displayName: Install the Azure Kinect Sensor SDK
+
+  # Build the catkin workspace
+  - bash: |
+      catkin_make --force-cmake
+    displayName: Build ROS Driver Node
+    workingDirectory: $(Build.SourcesDirectory)\catkin_ws
