--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,14 +79,16 @@ jobs:
     lfs: false
     persistCredentials: true
     submodules: true
-    path: catkin_ws\src\Azure_Kinect_ROS_Driver
+    path: catkin_ws/src/Azure_Kinect_ROS_Driver
 
   # Download and install the Azure Kinect Sensor SDK 
   - bash: |
+      printenv
+      apt-get curl
       curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
-      sudo apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
-      sudo apt-get update
-      sudo apt-get install libk4a1.1-dev
+      apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
+      apt-get update
+      apt-get install libk4a1.1-dev
     displayName: Install the Azure Kinect Sensor SDK
 
   # Build the catkin workspace
