--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,7 +84,8 @@ jobs:
   # Download and install the Azure Kinect Sensor SDK 
   - bash: |
       printenv
-      apt-get curl
+      su root
+      apt-get install curl
       curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
       apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
       apt-get update
