--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,9 +70,16 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
 
-  container: 'ros:melodic'
+  container: 
+    image: ros:melodic
+    options: "--name ci-container -v /usr/bin/docker:/tmp/docker:ro"
 
   steps:
+  - script: |
+      /tmp/docker exec -t -u 0 ci-container \
+      sh -c "apt-get update && DEBIAN_FRONTEND=noninteractive apt-get -o Dpkg::Options::="--force-confold" -y install sudo"
+    displayName: Enable sudo
+
   - checkout: self
     clean: "all"
     fetchDepth: 20
@@ -83,13 +90,11 @@ jobs:
 
   # Download and install the Azure Kinect Sensor SDK 
   - bash: |
-      printenv
-      su root
-      apt-get install curl
+      sudo apt-get install curl
       curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
-      apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
-      apt-get update
-      apt-get install libk4a1.1-dev
+      sudo apt-add-repository https://packages.microsoft.com/ubuntu/16.04/prod
+      sudo apt-get update
+      sudo apt-get install libk4a1.1-dev
     displayName: Install the Azure Kinect Sensor SDK
 
   # Build the catkin workspace
