Install apt-add-repository

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,7 +90,7 @@ jobs:
 
   # Download and install the Azure Kinect Sensor SDK 
   - bash: |
-      sudo apt-get install curl
+      sudo apt-get install curl apt-add-repository
       curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
       sudo apt-add-repository https://packages.microsoft.com/ubuntu/18.04/prod
       sudo apt-get update
