Preseed debconf database to install k4a SDK

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,7 +94,9 @@ jobs:
       curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
       sudo apt-add-repository https://packages.microsoft.com/ubuntu/18.04/prod
       sudo apt-get update
-      sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libk4a1.1-dev
+      echo libk4a1.1 libk4a1.1/accept-eula boolean true | sudo debconf-set-selections
+      echo libk4a1.1 libk4a1.1/accepted-eula-hash string 0f5d5c5de396e4fee4c0753a21fee0c1ed726cf0316204edda484f08cb266d76 | sudo debconf-set-selections -u
+      sudo apt-get -y install libk4a1.1-dev
     displayName: Install the Azure Kinect Sensor SDK
 
   # Build the catkin workspace
