--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,4 +103,4 @@ jobs:
   - bash: |
       catkin_make --force-cmake
     displayName: Build ROS Driver Node
-    workingDirectory: $(Build.SourcesDirectory)\catkin_ws
+    workingDirectory: $(Build.SourcesDirectory)/catkin_ws
