Need to source ROS before building

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,5 +101,6 @@ jobs:
 
   # Build the catkin workspace
   - bash: |
+      source /opt/ros/melodic/setup.bash
       catkin_make --force-cmake
     displayName: Build ROS Driver Node
