cd up to the catkin_ws folder

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,3 +104,4 @@ jobs:
       source /opt/ros/melodic/setup.bash
       catkin_make --force-cmake
     displayName: Build ROS Driver Node
+    workingDirectory: ../../
