--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <depend>tf2_geometry_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>nodelet</depend>
+  <depend>xacro</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
