--- a/package.xml
+++ b/package.xml
@@ -22,6 +22,7 @@
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>angles</depend>
   <depend>nodelet</depend>
   <depend>xacro</depend>
 
