--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- 
+<!--
  Copyright (c) Microsoft Corporation. All rights reserved.
  Licensed under the MIT License.
  -->
@@ -25,6 +25,7 @@
   <depend>angles</depend>
   <depend>nodelet</depend>
   <depend>xacro</depend>
+  <depend>cv_bridge</depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
