--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ jobs:
 
   # Download and install the Azure Kinect Sensor SDK 
   - powershell: |
-      wget http://download.microsoft.com/download/1/9/8/198048e8-63f2-45c6-8f96-1fd541d1b4bc/Azure%20Kinect%20SDK%201.2.0.msi -OutFile $(Build.SourcesDirectory)\sdk.msi
+      wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile $(Build.SourcesDirectory)\sdk.msi
       $(Build.SourcesDirectory)\sdk.msi /passive
 
   # Build the catkin workspace
