--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,8 +54,8 @@ jobs:
 
   # Download and install the Azure Kinect Sensor SDK 
   - powershell: |
-      wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile $(Build.SourcesDirectory)\sdk.msi
-      $(Build.SourcesDirectory)\sdk.msi /passive
+      wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile $(Build.SourcesDirectory)\sdk.exe
+      $(Build.SourcesDirectory)\sdk.exe /passive
 
   # Build the catkin workspace
   - script: |
