--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile sdk.exe
         $p = Start-Process -PassThru -FilePath ".\sdk.exe" -Wait -NoNewWindow -ArgumentList "/passive"
         $p.WaitForExit()
-    - uses: seanyen/action-ros-ci@seanyen/recursive
+    - uses: ros-tooling/action-ros-ci@master
       with:
         package-name: azure_kinect_ros_driver
         vcs-repo-file-url: ${{ github.workspace }}/ci/deps.rosinstall
