--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,8 +36,9 @@ jobs:
       - windows
     pre_build:
       - powershell: |
-          wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile $(Build.SourcesDirectory)\sdk.exe
-          $(Build.SourcesDirectory)\sdk.exe /passive
+          wget https://download.microsoft.com/download/e/6/6/e66482b2-b6c1-4e34-bfee-95294163fc40/Azure%20Kinect%20SDK%201.3.0.exe -OutFile sdk.exe
+          $p = Start-Process -PassThru -FilePath ".\sdk.exe" -Wait -NoNewWindow -ArgumentList "/passive"
+          $p.WaitForExit()
         displayName: Install Azure Kinect Sensor SDK v1.3.0 (Windows)
         condition: eq(variables['Agent.OS'], 'Windows_NT')
       - bash: |
