Adding URDF folder to the installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,5 +142,6 @@ install(TARGETS ${PROJECT_NAME}_node ${PROJECT_NAME}_nodelet
 install(
   DIRECTORY
   launch
+  urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
