--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,40 +4,29 @@
 cmake_minimum_required(VERSION 3.5)
 project(azure_kinect_ros_driver LANGUAGES C CXX)
 
+# list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
+
 list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  std_msgs
-  sensor_msgs
-  image_transport
-  nodelet
-  tf2
-  tf2_ros
-  tf2_geometry_msgs
-  geometry_msgs
-  nodelet
-  cv_bridge
-)
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-###################################
-## catkin specific configuration ##
-###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if your package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES k4a_ros_bridge
-#  CATKIN_DEPENDS roscpp std_msgs
-#  DEPENDS system_lib
-)
+## Find packages
+
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(image_transport REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(cv_bridge REQUIRED)
 
 ###########
 ## Build ##
@@ -45,8 +34,6 @@ catkin_package(
 
 
 ## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node
   src/k4a_ros_bridge_node.cpp
   src/k4a_ros_device.cpp
@@ -54,7 +41,7 @@ add_executable(${PROJECT_NAME}_node
   src/k4a_calibration_transform_data.cpp
   )
 
-target_compile_features(${PROJECT_NAME}_node PUBLIC cxx_std_11)
+ament_target_dependencies(${PROJECT_NAME}_node rclcpp std_msgs) 
 
 add_library(${PROJECT_NAME}_nodelet
   src/k4a_ros_bridge_nodelet.cpp
@@ -63,7 +50,8 @@ add_library(${PROJECT_NAME}_nodelet
   src/k4a_calibration_transform_data.cpp
   )
 
-target_compile_features(${PROJECT_NAME}_nodelet PUBLIC cxx_std_11)
+ament_target_dependencies(${PROJECT_NAME}_nodelet rclcpp std_msgs) 
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -108,20 +96,14 @@ include(Installk4a)
 ##################################
 ###### END AZURE KINECT SDK ######
 ##################################
-
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-  "include"
-)
+include_directories(include)
 
 target_link_libraries(${PROJECT_NAME}_node
   ${K4A_LIBS}
-  ${catkin_LIBRARIES}
 )
 
 target_link_libraries(${PROJECT_NAME}_nodelet
   ${K4A_LIBS}
-  ${catkin_LIBRARIES}
 )
 
 #############
@@ -133,9 +115,9 @@ target_link_libraries(${PROJECT_NAME}_nodelet
 
 ## Mark executables and/or libraries for installation
 install(TARGETS ${PROJECT_NAME}_node ${PROJECT_NAME}_nodelet
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
@@ -143,5 +125,7 @@ install(
   DIRECTORY
   launch
   urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DESTINATION share/${PROJECT_NAME}/
 )
+
+ament_package()
