--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <license>MIT</license>
   <!-- <url type="website">http://wiki.ros.org/azure_kinect_ros_driver</url> -->
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>image_transport</depend>
@@ -29,6 +29,7 @@
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
