--- a/.github/workflows/linux_ROS1.yaml
+++ b/.github/workflows/linux_ROS1.yaml
@@ -24,7 +24,7 @@ jobs:
       shell: bash
       run: |
         sudo apt update
-        sudo apt install ros-melodic-desktop-full
+        sudo apt install ros-melodic-desktop
       env:
         ROSDISTRO: ${{ matrix.ROSDISTRO }}
     - name: Install Azure Kinect Sensor SDK
