CI: Set up linux repo for Microsoft Products

--- a/.github/workflows/linux_ROS1.yaml
+++ b/.github/workflows/linux_ROS1.yaml
@@ -32,6 +32,9 @@ jobs:
     - name: Install Azure Kinect Sensor SDK
       shell: bash
       run: |
+        curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+        sudo apt-add-repository https://packages.microsoft.com/ubuntu/20.04/prod
+        sudo apt-get update
         sudo apt install k4a-tools
     - name: Build
       shell: bash
