CI: Change k4a versions to latest

--- a/.github/workflows/linux_ROS1.yaml
+++ b/.github/workflows/linux_ROS1.yaml
@@ -35,7 +35,8 @@ jobs:
         curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         sudo apt-add-repository https://packages.microsoft.com/ubuntu/18.04/prod
         sudo apt-get update
-        sudo apt install libk4a1.1 libk4a1.1-dev k4a-tools
+        sudo apt install k4a-tools
+        sudo apt install libk4a1.4-dev
     - name: Build
       shell: bash
       run: |
